--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@turf/bbox": "^6.5.0",
+    "@turf/distance": "^6.5.0",
+    "canvas-confetti": "^1.5.1",
     "geojson": "^0.5.0",
     "maplibre-gl": "^2.1.9",
     "rxjs": "~7.5.0",
