--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@angular/service-worker": "^14.0.0",
     "@turf/bbox": "^6.5.0",
     "@turf/distance": "^6.5.0",
     "canvas-confetti": "^1.5.1",
